Refactor schedule page structure and enhance game information retrieval

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-scraper/__pycache__/*
-__pycache__/*
-data/__pycache__/*
 scraping_env/*
 ahl_top_100_scorers.csv
-scraper/pages/__pycache__/*
+**/__pycache__/*
